--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -44,13 +44,39 @@
         android:id="@+id/textTimerLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginTop="20dp"
         android:text="Time left:"
+        android:gravity="end"
         android:fontFamily="@font/changa_one"
         android:textSize="25sp"
         app:layout_constraintEnd_toStartOf="@+id/textTimer"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textTimer1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="20dp"
+        android:fontFamily="@font/changa_one"
+        android:textSize="25sp"
+        android:text="timer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <TextView
+        android:id="@+id/textTimerLabel1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="20dp"
+        android:text="Time left:"
+        android:gravity="end"
+        android:fontFamily="@font/changa_one"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toStartOf="@+id/textTimer"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
