--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -41,6 +41,18 @@
     app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/PlayerTurn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/changa_one"
+        android:textSize="25sp"
+        android:text="Player 1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/textTimerLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
